--- a/images/nginx/php.ini
+++ b/images/nginx/php.ini
@@ -7,3 +7,6 @@ xdebug.renite_enable = 1
 xdebug.max_nesting_level = 1000
 xdebug.profiler_enable_trigger = 1
 xdebug.profiler_output_dir = "/var/log"
+
+;mcrypt
+extension=mcrypt.so
